k8s/traefik/home.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home
spec:
  ingressClassName: traefik
  tls:
    - secretName: wildcard-tls
  rules:
    - host: home.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home
                port:
                  number: 3000
